--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.1.1",
+    "body-parser": "1.20.2",
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.6.3",
     "uuid": "9.0.1"
